# klusters

./: Doxyfile  Makefile  Makefile.in  config.h  config.status  configure  configure.in  configure.in.in  klusters.kdevelop  klusters.kdevelop.pcs  klusters.kdevses  klusters.tag  libtool
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: Makefile  Makefile.am  Makefile.in
doc/en/: Makefile  Makefile.am  Makefile.in  index.cache.bz2  index.docbook
doc/en/images/: Makefile  Makefile.am  Makefile.in
html/: annotated.html  array_8h-source.html  autosavethread_8h-source.html  baseframe_8h-source.html  channelcolors_8h-source.html  channellist_8h-source.html  classArray-members.html  classArray.html  classArray__coll__graph.md5  classArray__inherit__graph.map  classArray__inherit__graph.md5  classAutoSaveThread-members.html  classAutoSaveThread.html  classAutoSaveThread_1_1AutoSaveEvent-members.html  classAutoSaveThread_1_1AutoSaveEvent.html  classAutoSaveThread__coll__graph.map  classAutoSaveThread__coll__graph.md5  classBaseFrame-members.html  classBaseFrame.html  classBaseFrame__coll__graph.map  classBaseFrame__coll__graph.md5  classBaseFrame__inherit__graph.map  classBaseFrame__inherit__graph.md5  classChannelColors-members.html  classChannelColors.html  classChannelList-members.html  classChannelList.html  classClusterInformationDialog-members.html  classClusterInformationDialog.html  classClusterPalette-members.html  classClusterPalette.html  classClusterPaletteIconViewItem-members.html  classClusterPaletteIconViewItem.html  classClusterPaletteIconViewItem__coll__graph.map  classClusterPaletteIconViewItem__coll__graph.md5  classClusterPaletteToolTip-members.html  classClusterPaletteToolTip.html  classClusterPalette__coll__graph.map  classClusterPalette__coll__graph.md5  classClusterUserInformation-members.html  (+387 more)
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  array.cpp  array.h  autosavethread.cpp  autosavethread.h  baseframe.cpp  baseframe.h  baseframe.moc.cpp  channelcolors.cpp  channelcolors.h  channellist.cpp  channellist.h  channellist.moc.cpp  clusterPalette.cpp  clusterPalette.h  clusterPalette.moc.cpp  clusterinformationdialog.cpp  clusterinformationdialog.h  clusterinformationdialog.moc  clusterpaletteiconviewitem.cpp  clusterpaletteiconviewitem.h  clusterpalettetooltip.cpp  clusterpalettetooltip.h  clustersprovider.cpp  clustersprovider.h  clustersprovider.moc.cpp  clusteruserinformation.h  clusterview.cpp  clusterview.h  clusterview.loT  clusterview.moc.cpp  configuration.cpp  configuration.h  correlationthread.cpp  correlationthread.h  correlationview.cpp  correlationview.h  correlationview.moc.cpp  (+97 more)
src/.deps/: array.Po  autosavethread.Po  baseframe.Po  baseframe.moc.Po  channelcolors.Po  channellist.Po  channellist.moc.Po  clusterPalette.Plo  clusterPalette.Po  clusterPalette.moc.Po  clusterinformationdialog.Po  clusterpaletteiconviewitem.Plo  clusterpaletteiconviewitem.Po  clusterpaletteiconviewitem.moc.Po  clusterpalettetooltip.Plo  clusterpalettetooltip.Po  clustersprovider.Po  clustersprovider.moc.Po  clusterview.Po  clusterview.moc.Po  configuration.Po  correlationthread.Po  correlationview.Po  correlationview.moc.Po  data.Plo  data.Po  dataprovider.Po  dataprovider.moc.Po  errormatrixthread.Po  errormatrixview.Po  errormatrixview.moc.Po  eventsprovider.Po  eventsprovider.moc.Po  groupingassistant.Po  itemcolors.Po  klusters.Plo  klusters.moc.Po  klustersdoc.Plo  klustersdoc.Po  klustersdoc.moc.Po  (+44 more)
src/cursors/: Makefile  Makefile.am  Makefile.in
src/icons/: Makefile  Makefile.am  Makefile.in
src/ui/: Makefile  Makefile.am  Makefile.in  prefclusterviewlayout.ui  prefgenerallayout.ui  prefwaveformviewlayout.ui
templates/: h
xml/: array_8cpp.xml  array_8h.xml  autosavethread_8cpp.xml  autosavethread_8h.xml  baseframe_8cpp.xml  baseframe_8h.xml  baseframe_8moc_8cpp.xml  channelcolors_8cpp.xml  channelcolors_8h.xml  channellist_8cpp.xml  channellist_8h.xml  channellist_8moc_8cpp.xml  classArray.xml  classAutoSaveThread.xml  classAutoSaveThread_1_1AutoSaveEvent.xml  classBaseFrame.xml  classChannelColors.xml  classChannelList.xml  classClusterInformationDialog.xml  classClusterPalette.xml  classClusterPaletteIconViewItem.xml  classClusterPaletteToolTip.xml  classClusterUserInformation.xml  classClusterView.xml  classClusterView_1_1ComputeEvent.xml  classClustersProvider.xml  classConfiguration.xml  classCorrelationThread.xml  classCorrelationThread_1_1CorrelationsEvent.xml  classCorrelationView.xml  classData.xml  classDataProvider.xml  classData_1_1ClusterInfo.xml  classData_1_1Correlation.xml  classData_1_1CorrelationsInProcess.xml  classData_1_1CorrelogramIterator.xml  classData_1_1Iterator.xml  classData_1_1SampleWaveformIterator.xml  classData_1_1TimeFrameWaveformIterator.xml  classData_1_1WaveformData.xml  (+171 more)
