####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = update.png delete_artefact.png delete_artefact_tool.png delete_noise.png delete_noise_tool.png group.png new_cluster.png new_clusters.png zoom_tool.png clusterview.png waveformview.png grouping_assistant_update.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/klusters/pics/
	$(INSTALL_DATA) $(srcdir)/update.png $(kde_datadir)/klusters/pics/update.png
	$(mkinstalldirs) $(kde_datadir)/klusters/pics/
	$(INSTALL_DATA) $(srcdir)/delete_artefact.png $(kde_datadir)/klusters/pics/delete_artefact.png
	$(mkinstalldirs) $(kde_datadir)/klusters/pics/
	$(INSTALL_DATA) $(srcdir)/delete_artefact_tool.png $(kde_datadir)/klusters/pics/delete_artefact_tool.png
	$(mkinstalldirs) $(kde_datadir)/klusters/pics/
	$(INSTALL_DATA) $(srcdir)/delete_noise.png $(kde_datadir)/klusters/pics/delete_noise.png
	$(mkinstalldirs) $(kde_datadir)/klusters/pics/
	$(INSTALL_DATA) $(srcdir)/delete_noise_tool.png $(kde_datadir)/klusters/pics/delete_noise_tool.png
	$(mkinstalldirs) $(kde_datadir)/klusters/pics/
	$(INSTALL_DATA) $(srcdir)/group.png $(kde_datadir)/klusters/pics/group.png
	$(mkinstalldirs) $(kde_datadir)/klusters/pics/
	$(INSTALL_DATA) $(srcdir)/new_cluster.png $(kde_datadir)/klusters/pics/new_cluster.png
	$(mkinstalldirs) $(kde_datadir)/klusters/pics/
	$(INSTALL_DATA) $(srcdir)/new_clusters.png $(kde_datadir)/klusters/pics/new_clusters.png
	$(mkinstalldirs) $(kde_datadir)/klusters/pics/
	$(INSTALL_DATA) $(srcdir)/zoom_tool.png $(kde_datadir)/klusters/pics/zoom_tool.png
	$(mkinstalldirs) $(kde_datadir)/klusters/pics/
	$(INSTALL_DATA) $(srcdir)/clusterview.png $(kde_datadir)/klusters/pics/clusterview.png
	$(mkinstalldirs) $(kde_datadir)/klusters/pics/
	$(INSTALL_DATA) $(srcdir)/waveformview.png $(kde_datadir)/klusters/pics/waveformview.png
	$(mkinstalldirs) $(kde_datadir)/klusters/pics/
	$(INSTALL_DATA) $(srcdir)/grouping_assistant_update.png $(kde_datadir)/klusters/pics/grouping_assistant_update.png

uninstall-local:
	-rm -f $(kde_datadir)/klusters/pics/update.png
	-rm -f $(kde_datadir)/klusters/pics/delete_artefact.png
	-rm -f $(kde_datadir)/klusters/pics/delete_artefact_tool.png
	-rm -f $(kde_datadir)/klusters/pics/delete_noise.png
	-rm -f $(kde_datadir)/klusters/pics/delete_noise_tool.png
	-rm -f $(kde_datadir)/klusters/pics/group.png
	-rm -f $(kde_datadir)/klusters/pics/new_cluster.png
	-rm -f $(kde_datadir)/klusters/pics/new_clusters.png
	-rm -f $(kde_datadir)/klusters/pics/zoom_tool.png
	-rm -f $(kde_datadir)/klusters/pics/clusterview.png
	-rm -f $(kde_datadir)/klusters/pics/waveformview.png
	-rm -f $(kde_datadir)/klusters/pics/grouping_assistant_update.png

####### kdevelop will overwrite this part!!! (end)############
INCLUDES = $(all_includes)
picsdir = $(kde_datadir)/klusters/pics/
pics_DATA = clusterview.png delete_artefact.png delete_artefact_tool.png delete_noise.png delete_noise_tool.png grouping_assistant_update.png group.png new_cluster.png new_clusters.png update.png waveformview.png zoom_tool.png time_tool.png backCluster.png forwardCluster.png
