METASOURCES = AUTO
imagesdir = $(kde_htmldir)/en/klusters/Images
images_DATA = GroupingAssistant-Change.png GroupingAssistant.png Klusters.png \
	Makefile Makefile.am Makefile.in MultipleProjections.png Overview.png \
	Parameters-Default.png Parameters-TimeFrame.png Parameters.png Tools.png TraceView.png \
	Waveform-Mean.png Waveform-Overlay.png Waveform-Scale.png XCorrelation-Asymptote.png \
	XCorrelation-Raw.png backCluster.png clusterInformationWindow.png clusterview.png \
	delete_artefact.png delete_artefact_tool.png delete_noise.png delete_noise_tool.png \
	forwardCluster.png group.png grouping_assistant_update.png new_cluster.png \
	new_clusters.png printer.png time_tool.png update.png waveformview.png zoom_tool.png
